completed function test of provided_test. TODO: authorization test
Signed-off-by: HalFtaN <half.a.tan@gmail.com>

--- a/app/views/provided_events/show.html.erb
+++ b/app/views/provided_events/show.html.erb
@@ -23,6 +23,6 @@
 
 <p>
   <%= link_to "Edit", edit_provider_provided_event_path(@provider, @provided_event), :class => "edit_link"%> |
-  <%= link_to "Destroy", [@provider, @provided_event], :confirm => 'Are you sure?', :method => :delete, :class => "delete_link"%> |
+  <%= link_to "Destroy", [@provider, @provided_event], :confirm => 'Are you sure?', :method => :delete, :class => "destroy_link"%> |
   <%= link_to "View All", provider_provided_events_path(@provider), :class => "index_link"%>
 </p>
