--- a/app/views/personal_events/index.html.erb
+++ b/app/views/personal_events/index.html.erb
@@ -8,6 +8,9 @@
     <th>Time</th>
     <th>Duration</th>
     <th>Level</th>
+    <th></th>
+    <th></th>
+    <th></th>
   </tr>
   <% for event in @personal_events %>
     <tr>
@@ -17,11 +20,19 @@
       <td><%= event.time %></td>
       <td><%= event.duration %></td>
       <td><%= event.level %></td>
-      <td><%= link_to "Show", [current_user, event] %></td>
-      <td><%= link_to "Edit", edit_user_personal_event_path(current_user, event) %></td>
-      <td><%= link_to "Destroy", [current_user, event], :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to "Show", [@user, event] %></td>
+      <% if can? :manage, event %>
+        <td><%= link_to "Edit", edit_user_personal_event_path(@user, event) %></td>
+        <td><%= link_to "Destroy", [@user, event], :confirm => 'Are you sure?', :method => :delete %></td>
+      <% else %>
+        <% if event.attendees.include? current_user %>
+          <td><%= link_to("Quit event", quit_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
+        <% else %>
+          <td><%= link_to("Attend event", attend_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
+        <% end %>
+      <% end %>
     </tr>
   <% end %>
 </table>
 
-<p><%= link_to "New Event", new_user_personal_event_path(current_user) %></p>
+<p><%= link_to "New Event", new_user_personal_event_path(current_user) if current_user == @user%></p>
