--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,54 @@
 <div class="links">
   <% if can? :manage, @user %>
     <p><%= link_to "New Event", new_user_personal_event_path(@user), :class => "new_link" %></p>
-    <p><%= link_to "Register Provider", new_user_provider_path(@user), :class => "register_provider_path" if @user.has_role? :manager %> </p>
+    <% if current_user == @user %>
+      <h1>What are people doing?</h1>
+      <% if @events.present? %>
+        <div class="span8">
+        <table class="table table-condensed">
+          <thead>
+            <tr>
+              <th>Event</th>
+              <th>Host</th>
+              <th>Location</th>
+              <th>Time</th>
+              <th>Duration</th>
+              <th>Description</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @events.each do |event|%>
+            <tr>
+              <td><%= link_to event.name, event_path(event) %></td>
+              <td><%= event.host_name %></td>
+              <td><%= event.location %></td>
+              <td><%= event.time %></td>
+              <td><%= event.duration %></td>
+              <td><%= truncate event.description, :length => 30 %></td>
+              <td></td>
+              <% if event.attendees.include? current_user %>
+                <td><%= link_to("Quit event", quit_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
+              <% else %>
+                <td><%= link_to("Attend event", attend_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
+              <% end %>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+        </div>
+      <% else %>
+        <p>Attend events to see what are people doing.</p>
+      <% end %>
+    <% end %>
+    <p><%= link_to "Register Provider", new_user_provider_path(@user), :class => "register_provider_path" if @user.has_role? :manager and @user.providers.count < 1 %> </p>
   <% elsif user_signed_in? %>
     <% if current_user.followed_ids.include? @user.id %>
-      <p><%= button_to "Unfollow", unfollow_user_path(current_user, :follows => @user.id) %></p>
+      <p><%= link_to "Events of user", user_personal_events_path(@user) %></p>
+      <p><%= link_to "Unfollow", unfollow_user_path(current_user, :follows => @user.id), :method => :post, :class => 'btn btn-mini' %></p>
     <% else %>
-      <p><%= button_to "Follow", follow_user_path(current_user, :follows => @user.id) %> </p>
+      <p><%= link_to "Follow", follow_user_path(current_user, :follows => @user.id), :method => :post, :class => 'btn btn-mini' %> </p>
     <% end %>
   <% else %>
     <p><%= link_to "Not a member?", new_user_registration_path %></p>
