--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,11 @@
 
 <div class="links">
   <% if can? :manage, @user %>
-    <p><%= link_to "New Event", new_user_personal_event_path(@user), :class => "new_link" %></p>
+    <p><%= link_to t("app.NewEvent"), new_user_personal_event_path(@user), :class => "new_link" %></p>
     <% if current_user == @user %>
       <h1>What are people doing?</h1>
       <% if @events.present? %>
-        <%= link_to "Attended events", user_path(current_user, :filter => 'attended') %>
+        <%= link_to t("app.AttendedEvents"), user_path(current_user, :filter => 'attended') %>
         <%= link_to "Followed user's events", user_path(current_user, :filter => 'followed') %>
         <div class="span8">
         <table class="table table-condensed">
