changed level to visibility
Signed-off-by: HalFtaN <half.a.tan@gmail.com>

--- a/app/views/personal_events/_form.html.erb
+++ b/app/views/personal_events/_form.html.erb
@@ -21,8 +21,8 @@
     <%= f.number_field :duration %>
   </p>
   <p>
-    <%= f.label :level %><br />
-    <%= f.number_field :level %>
+    <%= f.label :visibility %><br />
+    <%= f.number_field :visibility %>
   </p>
   <p>
     <%= f.hidden_field :owner_id %>
