--- a/app/views/personal_events/show.html.erb
+++ b/app/views/personal_events/show.html.erb
@@ -21,8 +21,8 @@
   <%= @personal_event.duration %>
 </p>
 <p>
-  <strong>Level:</strong>
-  <%= @personal_event.level %>
+  <strong>Visibility:</strong>
+  <%= @personal_event.visibility %>
 </p>
 
 <p>
