--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,14 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical', :multipart => true }) do |f| %>
+<h2><%= resource_name.to_s.humanize %></h2>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical span8', :multipart => true }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-  <%= f.input :password_confirmation, :required => false %>
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+  <%= f.input :name, :autofocus => true, :required => true, :label => t("app.sign_up.name") %>
+  <%= f.input :email, :required => true, :label => t("app.sign_up.email") %>
+  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false, :label => t("app.sign_up.passwd") %>
+  <%= f.input :password_confirmation, :required => false, :label => t("app.sign_up.passwd_conf") %>
+  <%= f.input :current_password, :hint => t("app.sign_up.change_password"), :required => true, :label => t("app.sign_up.current_passwd") %>
   <%= image_tag resource.avatar.url(:thumb) if resource.avatar.present? %>
-  <%= f.file_field :avatar %>
+  <%= f.file_field :avatar, :label => t("app.sign_up.avatar") %>
   <br/><br/>
   <%= f.button :submit, 'Update', :class => 'btn-primary' %>
 <% end %>
