--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -4,10 +4,10 @@
   <table class="table table-condensed">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Manager</th>
-        <th>Event Count</th>
+        <th><%= t("app.form.name") %></th>
+        <th><%= t("app.form.description") %></th>
+        <th><%= t("app.form.manager") %></th>
+        <th><%= t("app.form.event_count") %></th>
         <th></th>
         <th></th>
         <th></th>
