--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -1,10 +1,10 @@
-<h3>Followers</h3>
+<h3><%= t("app.followers")%></h3>
 <div class="span8">
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Username</th>
-      <th>Email</th>
+      <th><%= t("app.form.username") %></th>
+      <th><%= t("app.form.email") %></th>
       <th></th>
       <th></th>
     </tr>
