--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
-<h3>Users</h3>
+<h3><%= t("app.users")%></h3>
 <div class="span8">
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Registered</th>
-      <th>Role</th>
+      <th><%= t("app.form.username") %></th>
+      <th><%= t("app.form.email") %></th>
+      <th><%= t("app.form.registered") %></th>
+      <th><%= t("app.form.role") %></th>
       <th></th>
       <th></th>
     </tr>
