--- a/app/views/providers/new.html.erb
+++ b/app/views/providers/new.html.erb
@@ -1,5 +1,3 @@
-<% title "Register Provider" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", user_providers_path(current_user) %></p>
+<div class="row span8">
+  <%= render 'form' %>
+</div>
