--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,9 @@
 <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 <% end %>
 
+<div class="row-fluid">
 <!--百度地图容器-->
-<div style="width:697px;height:550px;border:#ccc solid 1px;float:left;" id="dituContent" class="span8"></div>
+<div style="width:500px;height:460px;border:#ccc solid 1px;float:left;" id="dituContent" class="span4"></div>
 
 <% unless @signed_in %>
   <div id="sign_in" class="span4">
@@ -23,51 +24,10 @@
   </div>
 <% else %>
   <div class="span4">
-    <%= link_to t("app.attended_events"), root_path(:filter => 'attended'), :class => 'span3 btn btn-mini' %>
-    <%= link_to t("app.followeds_events"), root_path(:filter => 'followed'), :class => 'span3 btn btn-mini' %>
-    <table class="table table-condensed">
-      <thead>
-        <tr>
-          <th>Event</th>
-          <th>Host</th>
-          <th>Location</th>
-          <th>Time</th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-      <% @events.each do |event|%>
-        <tr>
-          <td>
-            <% if event.is_a? ProvidedEvent %>
-              <%= link_to event.name, provider_provided_event_path(event.owner_id, event) %>
-            <% else %>
-              <%= link_to event.name, user_personal_event_path(event.owner_id, event) %>
-            <% end %>
-          </td>
-          <td>
-            <% if event.is_a? ProvidedEvent %>
-              <%= link_to event.host_name, provider_path(event.owner_id) %>
-            <% else %>
-              <%= link_to event.host_name, user_path(event.owner_id) %>
-            <% end %>
-          </td>
-          <td><%= event.host_name %></td>
-          <td><%= event.location %></td>
-          <td><%= event.time %></td>
-          <td></td>
-          <% if event.attendees.include? current_user %>
-            <td><%= link_to("Quit event", quit_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
-          <% else %>
-            <td><%= link_to("Attend event", attend_event_path(event), :method => :post, :class => 'btn btn-mini') %></td>
-          <% end %>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <%= render "events" %>
   </div>
 <% end %>
+</div>
 
 <% content_for :map do %>
   <script type="text/javascript">
