--- a/app/views/provided_events/new.html.erb
+++ b/app/views/provided_events/new.html.erb
@@ -1,5 +1,3 @@
-<% title "New Event" %>
-
-<%= render 'form' %>
-
-<p><%= link_to "Back to List", provider_provided_events_path(@provider) %></p>
+<div class="row span8">
+  <%= render 'form' %>
+</div>
