--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,25 +8,16 @@
 
 <div class="row-fluid">
 <!--百度地图容器-->
-<div style="width:500px;height:460px;border:#ccc solid 1px;float:left;" id="dituContent" class="span4"></div>
+<div style="height:550px;border:#ccc solid 1px;" id="dituContent" class="span6"></div>
 
-<% unless @signed_in %>
-  <div id="sign_in" class="span4">
-    <h2>Sign in</h2>
-    <%=  %>
-    <%= simple_form_for(@user, :as => resource_name, :url => session_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-      <%= f.input :email, :label => false, :autofocus => true, :placeholder => t("app.sign_in.email_hint") %>
-      <%= f.input :password, :label => false, :placeholder => t("app.sign_in.password_hint") %>
-      <%= f.input :remember_me, :as => :boolean, :inline_label => t("app.remember_me"), :label => false if devise_mapping.rememberable? %>
-      <%= f.button :submit, "Sign in", :class => 'btn-primary' %>
+  <div class="span6" sytle="test-align:center;">
+    <% unless @signed_in %>
+      <%= render 'sign_in' %>
+    <% else %>
+        <%= render "events" %>
     <% end %>
-    <%= render "devise/shared/links" %>
   </div>
-<% else %>
-  <div class="span4">
-    <%= render "events" %>
-  </div>
-<% end %>
+
 </div>
 
 <% content_for :map do %>
