--- a/app/views/provided_events/_form.html.erb
+++ b/app/views/provided_events/_form.html.erb
@@ -1,16 +1,16 @@
 <% content_for :head do %>
 <%= javascript_include_tag "form" %>
 <% end %>
-<%= simple_form_for [@provider, @provided_event] do |f| %>
+<%= simple_form_for([@provider, @provided_event], :html => {:class => 'form-horizontal'}) do |f| %>
   <legend><%= t "app.titles.provided_event" %></legend>
   <%= f.error_messages %>
   <%= f.input :name, :required => true %>
   <%= f.input :location, :required => true %>
   <%= f.input :time, :as => :datetime_picker, :required => true %>
   <%= init_datetime_picker %>
-  <%= f.input :description, input_html: { rows: 8 } %>
   <%= f.input :duration %>
   <%= f.input :visibility, :collection => [:everybody, :followers_only, :specified], :default => :everybody %>
+  <%= f.input :description, input_html: { rows: 8 } %>
   <%= f.hidden_field :owner_id %>
   <%= form_actions f %>
 <% end %>
